Terraform/route-table.tf
#############################################
# Public Route Table
#############################################

resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main_vpc.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {
    Name = "${var.project_name}-public-route-table"
  }
}

#############################################
# Public Subnet 1 Association
#############################################

resource "aws_route_table_association" "public_assoc_1" {

  subnet_id = aws_subnet.public_subnet_1.id

  route_table_id = aws_route_table.public_rt.id
}

#############################################
# Public Subnet 2 Association
#############################################

resource "aws_route_table_association" "public_assoc_2" {

  subnet_id = aws_subnet.public_subnet_2.id

  route_table_id = aws_route_table.public_rt.id
}
